# morse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  biome.json  build-docker.sh  constants.py  docker-entrypoint.sh  dsp.py  eval_beam.py  eval_bench200.py  evaluate.py  generate_eval.py  knip.json  launch-runpod.py  lefthook.yml  main.py  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.config.ts
.github/workflows/: deploy.yml  publish.yml
.impeccable/: hook.cache.json
apps/decoder/: CLAUDE.md  index.html  package.json
apps/decoder/src-tauri/: Cargo.toml  Info.plist  REUSE.toml  build.rs  tauri.conf.json
apps/decoder/src-tauri/icons/: icon.icns
apps/decoder/src-tauri/src/: decode.rs  dsp.rs  lib.rs  live.rs  main.rs  model.rs  pipeline.rs  resample.rs  tone.rs
apps/decoder/src-tauri/src/audio/: device.rs  file.rs  mod.rs  monitor.rs  source.rs
apps/web/: .env.production  .env.production.example  .gitignore  REUSE.toml  index.html  package.json  tsconfig.json  vite-plugin-seo-head.ts  vite.config.ts  (+2 more)
checkpoints/: best.pt  best.yaml
configs/: base.yaml  debug.yaml
cw-dsp-research/: CURRENT.md  generate_eval.py
data/: dataset.py  dsp.py  generate.py
demo/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
eval/: decode.py  evaluate.py
model/: .dockerignore  .gitignore  Dockerfile  RUNS.md  build-docker.sh  cwnet.py  eval_beam.py  eval_bench200.py  inspect_slow.py  launch-runpod.py  main.py  pnpm-workspace.yaml
scripts/: export_onnx.py
training/: train.py
(+232 files in other folders)
