[package]
name = "decoder"
version = "0.1.0"
description = "Native desktop CW decoder (Morse suite)"
authors = ["John Schult W4GIT", "Mark Percival KC4T"]
edition = "2021"

[lib]
name = "decoder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
